; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rts5208/extr_rtsx_card.c_turn_on_led.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rts5208/extr_rtsx_card.c_turn_on_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtsx_chip = type { i32 }

@CARD_GPIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @turn_on_led(%struct.rtsx_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.rtsx_chip*, align 8
  %4 = alloca i32, align 4
  store %struct.rtsx_chip* %0, %struct.rtsx_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.rtsx_chip*, %struct.rtsx_chip** %3, align 8
  %6 = call i64 @CHECK_PID(%struct.rtsx_chip* %5, i32 21128)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load %struct.rtsx_chip*, %struct.rtsx_chip** %3, align 8
  %10 = load i32, i32* @CARD_GPIO, align 4
  %11 = load i32, i32* %4, align 4
  %12 = shl i32 1, %11
  %13 = load i32, i32* %4, align 4
  %14 = shl i32 1, %13
  %15 = call i32 @rtsx_write_register(%struct.rtsx_chip* %9, i32 %10, i32 %12, i32 %14)
  br label %22

16:                                               ; preds = %2
  %17 = load %struct.rtsx_chip*, %struct.rtsx_chip** %3, align 8
  %18 = load i32, i32* @CARD_GPIO, align 4
  %19 = load i32, i32* %4, align 4
  %20 = shl i32 1, %19
  %21 = call i32 @rtsx_write_register(%struct.rtsx_chip* %17, i32 %18, i32 %20, i32 0)
  br label %22

22:                                               ; preds = %16, %8
  ret void
}

declare dso_local i64 @CHECK_PID(%struct.rtsx_chip*, i32) #1

declare dso_local i32 @rtsx_write_register(%struct.rtsx_chip*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
